[package]
name = "galaxy-sim"
version = "0.5.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", features = ["wgpu"] }
egui = "0.27"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.25"
rand_distr = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
rodio = "0.19"
rayon = "1.10"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"